src/vocabularyParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class vocabularyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		REAL=1, BOOL=2, STRING=3, SEPARATOR=4, TXT=5, REAL_INT=6, REAL_HEX=7, 
		REAL_FLOAT=8, ONCOMMENT=9, MLCOMMENT=10, WS=11, PLUS=12, MINUS=13, MULT=14, 
		DIV=15, POW=16, FAC=17, ASSIGN=18, AND=19, OR=20, NOT=21, XOR=22, REMAIN=23, 
		COND_IF=24, COLON=25, EQUAL=26, GREQUAL=27, LEEQUAL=28, NOTEQUAL=29, GREATER=30, 
		LESS=31, PARENTHESIS_OPEN=32, PARENTHESIS_CLOSE=33, COMMA=34, TRUE=35, 
		FALSE=36, IF=37, THEN=38, ELSE=39, BEGIN=40, END=41, WHILE=42, READ=43, 
		WRITE=44, MODULE=45, INPUT=46, OUTPUT=47, RETURN=48, IDENTIFIER=49, OTHER=50;
	public static final int
		RULE_comment = 0, RULE_stat = 1, RULE_end = 2, RULE_variableDeclarator = 3, 
		RULE_assign = 4, RULE_boolExp = 5, RULE_textExp = 6, RULE_mathOp = 7, 
		RULE_logicalOp = 8, RULE_compareOp = 9, RULE_value = 10, RULE_mathExp = 11, 
		RULE_read = 12, RULE_write = 13, RULE_ifCondition = 14, RULE_whileLoop = 15, 
		RULE_codeBlock = 16, RULE_moduleInput = 17, RULE_moduleOutput = 18, RULE_createModule = 19, 
		RULE_returnValue = 20, RULE_callModule = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"comment", "stat", "end", "variableDeclarator", "assign", "boolExp", 
			"textExp", "mathOp", "logicalOp", "compareOp", "value", "mathExp", "read", 
			"write", "ifCondition", "whileLoop", "codeBlock", "moduleInput", "moduleOutput", 
			"createModule", "returnValue", "callModule"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "';'", null, null, null, null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'!'", "'='", null, null, null, null, 
			"'%'", "'?'", "':'", "'=='", "'>='", "'<='", "'<>'", "'>'", "'<'", "'('", 
			"')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "REAL", "BOOL", "STRING", "SEPARATOR", "TXT", "REAL_INT", "REAL_HEX", 
			"REAL_FLOAT", "ONCOMMENT", "MLCOMMENT", "WS", "PLUS", "MINUS", "MULT", 
			"DIV", "POW", "FAC", "ASSIGN", "AND", "OR", "NOT", "XOR", "REMAIN", "COND_IF", 
			"COLON", "EQUAL", "GREQUAL", "LEEQUAL", "NOTEQUAL", "GREATER", "LESS", 
			"PARENTHESIS_OPEN", "PARENTHESIS_CLOSE", "COMMA", "TRUE", "FALSE", "IF", 
			"THEN", "ELSE", "BEGIN", "END", "WHILE", "READ", "WRITE", "MODULE", "INPUT", 
			"OUTPUT", "RETURN", "IDENTIFIER", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public vocabularyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode ONCOMMENT() { return getToken(vocabularyParser.ONCOMMENT, 0); }
		public TerminalNode MLCOMMENT() { return getToken(vocabularyParser.MLCOMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !(_la==ONCOMMENT || _la==MLCOMMENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public Token OTHER;
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public MathExpContext mathExp() {
			return getRuleContext(MathExpContext.class,0);
		}
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public VariableDeclaratorContext variableDeclarator() {
			return getRuleContext(VariableDeclaratorContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public CallModuleContext callModule() {
			return getRuleContext(CallModuleContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(vocabularyParser.SEPARATOR, 0); }
		public CreateModuleContext createModule() {
			return getRuleContext(CreateModuleContext.class,0);
		}
		public TextExpContext textExp() {
			return getRuleContext(TextExpContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(vocabularyParser.OTHER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				comment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				ifCondition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				mathExp(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(50);
				boolExp(0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(51);
				variableDeclarator();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(52);
				whileLoop();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(53);
				write();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(54);
				read();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(55);
				callModule();
				setState(56);
				match(SEPARATOR);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(58);
				createModule();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(59);
				textExp(0);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(60);
				((StatContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown char: " + (((StatContext)_localctx).OTHER!=null?((StatContext)_localctx).OTHER.getText():null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EndContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode EOF() { return getToken(vocabularyParser.EOF, 0); }
		public EndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitEnd(this);
		}
	}

	public final EndContext end() throws RecognitionException {
		EndContext _localctx = new EndContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			stat();
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclaratorContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(vocabularyParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(vocabularyParser.COLON, 0); }
		public TerminalNode SEPARATOR() { return getToken(vocabularyParser.SEPARATOR, 0); }
		public TerminalNode REAL() { return getToken(vocabularyParser.REAL, 0); }
		public TerminalNode BOOL() { return getToken(vocabularyParser.BOOL, 0); }
		public TerminalNode STRING() { return getToken(vocabularyParser.STRING, 0); }
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterVariableDeclarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitVariableDeclarator(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclarator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(IDENTIFIER);
			setState(68);
			match(COLON);
			setState(69);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(70);
			match(SEPARATOR);
			System.out.println("variableDeclarator");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(vocabularyParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(vocabularyParser.ASSIGN, 0); }
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(vocabularyParser.SEPARATOR, 0); }
		public TextExpContext textExp() {
			return getRuleContext(TextExpContext.class,0);
		}
		public MathExpContext mathExp() {
			return getRuleContext(MathExpContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(IDENTIFIER);
				setState(74);
				match(ASSIGN);
				setState(75);
				boolExp(0);
				setState(76);
				match(SEPARATOR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(IDENTIFIER);
				setState(79);
				match(ASSIGN);
				setState(80);
				textExp(0);
				setState(81);
				match(SEPARATOR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(IDENTIFIER);
				setState(84);
				match(ASSIGN);
				setState(85);
				mathExp(0);
				setState(86);
				match(SEPARATOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolExpContext extends ParserRuleContext {
		public List<MathExpContext> mathExp() {
			return getRuleContexts(MathExpContext.class);
		}
		public MathExpContext mathExp(int i) {
			return getRuleContext(MathExpContext.class,i);
		}
		public List<BoolExpContext> boolExp() {
			return getRuleContexts(BoolExpContext.class);
		}
		public BoolExpContext boolExp(int i) {
			return getRuleContext(BoolExpContext.class,i);
		}
		public LogicalOpContext logicalOp() {
			return getRuleContext(LogicalOpContext.class,0);
		}
		public CompareOpContext compareOp() {
			return getRuleContext(CompareOpContext.class,0);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode NOT() { return getToken(vocabularyParser.NOT, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(vocabularyParser.PARENTHESIS_OPEN, 0); }
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(vocabularyParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode TRUE() { return getToken(vocabularyParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(vocabularyParser.FALSE, 0); }
		public BoolExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterBoolExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitBoolExp(this);
		}
	}

	public final BoolExpContext boolExp() throws RecognitionException {
		return boolExp(0);
	}

	private BoolExpContext boolExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BoolExpContext _localctx = new BoolExpContext(_ctx, _parentState);
		BoolExpContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_boolExp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(91);
				mathExp(0);
				setState(94);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(92);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(93);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(96);
				boolExp(10);
				}
				break;
			case 2:
				{
				setState(98);
				mathExp(0);
				setState(101);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(99);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(100);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(103);
				mathExp(0);
				}
				break;
			case 3:
				{
				setState(105);
				mathExp(0);
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(106);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(107);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110);
				value();
				}
				break;
			case 4:
				{
				setState(112);
				value();
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(113);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(114);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(117);
				boolExp(7);
				}
				break;
			case 5:
				{
				setState(119);
				value();
				setState(122);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(120);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(121);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(124);
				mathExp(0);
				}
				break;
			case 6:
				{
				setState(126);
				value();
				setState(129);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AND:
				case OR:
				case XOR:
					{
					setState(127);
					logicalOp();
					}
					break;
				case EQUAL:
				case GREQUAL:
				case LEEQUAL:
				case NOTEQUAL:
				case GREATER:
				case LESS:
					{
					setState(128);
					compareOp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(131);
				value();
				}
				break;
			case 7:
				{
				setState(133);
				match(NOT);
				setState(134);
				boolExp(4);
				}
				break;
			case 8:
				{
				setState(135);
				match(PARENTHESIS_OPEN);
				setState(136);
				boolExp(0);
				setState(137);
				match(PARENTHESIS_CLOSE);
				}
				break;
			case 9:
				{
				setState(139);
				match(TRUE);
				}
				break;
			case 10:
				{
				setState(140);
				match(FALSE);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(166);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(164);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new BoolExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolExp);
						setState(143);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(146);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case AND:
						case OR:
						case XOR:
							{
							setState(144);
							logicalOp();
							}
							break;
						case EQUAL:
						case GREQUAL:
						case LEEQUAL:
						case NOTEQUAL:
						case GREATER:
						case LESS:
							{
							setState(145);
							compareOp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(148);
						boolExp(14);
						}
						break;
					case 2:
						{
						_localctx = new BoolExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolExp);
						setState(150);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(153);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case AND:
						case OR:
						case XOR:
							{
							setState(151);
							logicalOp();
							}
							break;
						case EQUAL:
						case GREQUAL:
						case LEEQUAL:
						case NOTEQUAL:
						case GREATER:
						case LESS:
							{
							setState(152);
							compareOp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(155);
						mathExp(0);
						}
						break;
					case 3:
						{
						_localctx = new BoolExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolExp);
						setState(157);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(160);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case AND:
						case OR:
						case XOR:
							{
							setState(158);
							logicalOp();
							}
							break;
						case EQUAL:
						case GREQUAL:
						case LEEQUAL:
						case NOTEQUAL:
						case GREATER:
						case LESS:
							{
							setState(159);
							compareOp();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(162);
						value();
						}
						break;
					}
					} 
				}
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextExpContext extends ParserRuleContext {
		public TerminalNode TXT() { return getToken(vocabularyParser.TXT, 0); }
		public List<TextExpContext> textExp() {
			return getRuleContexts(TextExpContext.class);
		}
		public TextExpContext textExp(int i) {
			return getRuleContext(TextExpContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(vocabularyParser.PLUS, 0); }
		public TextExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).enterTextExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof vocabularyListener ) ((vocabularyListener)listener).exitTextExp(this);
		}
	}

	public final TextExpContext textExp() throws RecognitionException {
		return textExp(0);
	}

	private TextExpContext textExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TextExpContext _localctx = new TextExpContext(_ctx, _parentState);
		TextExpContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_textExp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(170);
			match(TXT);
			}
			_ctx.stop = _input.LT(-1);
			setState(177);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TextExpContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_textExp);
					setState(172);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(173);
					match(PLUS);
					setState(174);
					textExp(2);
					}
					} 
				}
				setState(179);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
